change package name to ng-mat-table-filter and introduce full filter logic

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mat-table-filter/source",
+  "name": "@ng-mat-table-filter/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
