--- a/libs/mat-table-filter/package.json
+++ b/libs/mat-table-filter/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mat-table-filter",
+  "name": "ng-mat-table-filter",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.0.0",
-    "@angular/core": "^16.0.0"
+    "@angular/core": "^16.0.0",
+    "@angular/material": "^16.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
