--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve demo"
+    "start": "nx serve demo",
+    "build": "nx build mat-table-filter"
   },
   "private": true,
   "dependencies": {
