--- a/apps/demo/.eslintrc.json
+++ b/apps/demo/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "matTableFilter",
+            "prefix": "ngMatTableFilter",
             "style": "camelCase"
           }
         ],
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "mat-table-filter",
+            "prefix": "ng-mat-table-filter",
             "style": "kebab-case"
           }
         ]
