--- a/package.json
+++ b/package.json
@@ -4,57 +4,60 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve demo",
-    "build": "nx build mat-table-filter"
+    "build": "nx build mat-table-filter",
+    "build:demo": "nx run demo:build:development",
+    "serve-demo-static": "nx run demo:serve-static"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.0.0",
-    "@angular/cdk": "^16.0.2",
-    "@angular/common": "~16.0.0",
-    "@angular/compiler": "~16.0.0",
-    "@angular/core": "~16.0.0",
-    "@angular/forms": "~16.0.0",
-    "@angular/material": "^16.0.2",
-    "@angular/platform-browser": "~16.0.0",
-    "@angular/platform-browser-dynamic": "~16.0.0",
-    "@angular/router": "~16.0.0",
-    "@nx/angular": "16.3.0",
+    "@angular/animations": "16.1.4",
+    "@angular/cdk": "16.1.4",
+    "@angular/common": "16.1.4",
+    "@angular/compiler": "16.1.4",
+    "@angular/core": "16.1.4",
+    "@angular/forms": "16.1.4",
+    "@angular/material": "16.1.4",
+    "@angular/platform-browser": "16.1.4",
+    "@angular/platform-browser-dynamic": "16.1.4",
+    "@angular/router": "16.1.4",
+    "@nx/angular": "16.5.3",
+    "ng-mat-table-filter": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.0.0",
-    "@angular-devkit/core": "~16.0.0",
-    "@angular-devkit/schematics": "~16.0.0",
-    "@angular-eslint/eslint-plugin": "~16.0.0",
-    "@angular-eslint/eslint-plugin-template": "~16.0.0",
-    "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "~16.0.0",
-    "@angular/language-service": "~16.0.0",
-    "@nx/cypress": "16.3.0",
-    "@nx/eslint-plugin": "16.3.0",
-    "@nx/jest": "16.3.0",
-    "@nx/js": "16.3.0",
-    "@nx/linter": "16.3.0",
-    "@nx/web": "16.3.0",
-    "@nx/workspace": "16.3.0",
+    "@angular-devkit/build-angular": "16.1.4",
+    "@angular-devkit/core": "16.1.4",
+    "@angular-devkit/schematics": "16.1.4",
+    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-eslint/eslint-plugin-template": "16.1.0",
+    "@angular-eslint/template-parser": "16.1.0",
+    "@angular/cli": "16.1.4",
+    "@angular/compiler-cli": "16.1.4",
+    "@angular/language-service": "16.1.4",
+    "@nx/cypress": "16.5.3",
+    "@nx/eslint-plugin": "16.5.3",
+    "@nx/jest": "16.5.3",
+    "@nx/js": "16.5.3",
+    "@nx/linter": "16.5.3",
+    "@nx/web": "16.5.3",
+    "@nx/workspace": "16.5.3",
     "@schematics/angular": "~16.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "cypress": "^12.11.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "cypress": "^12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
-    "ng-packagr": "~16.0.0",
-    "nx": "16.3.0",
-    "nx-cloud": "latest",
+    "ng-packagr": "16.1.0",
+    "nx": "16.5.3",
+    "nx-cloud": "16.1.1",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -62,6 +65,6 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
+    "typescript": "5.1.6"
   }
 }
